--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -15,7 +15,7 @@ window#waybar {
 }
 
 #workspaces {
-    margin: 2px 2px 2px 6px;
+    margin: 6px 2px 2px 6px;
     background-color: transparent;
 }
 
@@ -53,8 +53,11 @@ window#waybar {
 #pulseaudio,
 #clock {
     background: rgba(0, 0, 0, 0.2);
+    border: 0px solid transparent;
     padding: 0px 0px 6px 0px;
     margin:  0px 0px 12px 4px;
+    border-bottom-left-radius: 12;
+    border-bottom-right-radius: 12;
     color: #D8DEE9;
 }
 
@@ -65,6 +68,10 @@ window#waybar {
 #clock.date-glyph {
     padding: 8px 0px 0px 0px;
     margin:  0px 0px 0px 4px;
+    border-top-left-radius: 12;
+    border-top-right-radius: 12;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 #battery.warning:not(.charging) {
@@ -79,8 +86,10 @@ window#waybar {
 
 #tray {
     background: rgba(0, 0, 0, 0.2);
-    margin:  0px 0px 12px 4px;
+    margin:  0px 0px 0px 4px;
     padding: 8px 0px;
+    border: 0px solid transparent;
+    border-radius: 12;
 }
 
 #mode {
@@ -103,4 +112,13 @@ window#waybar {
 #custom-rofi-windows.open,
 #custom-rofi-options.open {
     color: #B48EAD;
+}
+
+box.vertical.modules-center {
+    background: rgba(0, 0, 0, 0.2);
+    border: 0px solid transparent;
+    border-radius: 12;
+    margin: 2px 8px 2px 12px;
+    border: 4px solid #B48EAD;
+    border-radius: 8;
 }
