Sway: Updated icons for special workspaces
Waybar is configured to display workspace names/numbers in bold which
caused the Steam glyph to turn into a non-descript blob.

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: Fira Sans;
+    font-family: "Fira Sans", "Font Awesome 6 Free";
     font-size: 20px;
 }
 
