Waybar: Switched from Font Awesome to Nerd glyphs

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "Fira Sans", "Font Awesome 6 Free";
+    font-family: "Fira Sans", "Symbols Nerd Font";
     font-size: 20px;
 }
 
